Better update auto restart, restart on mod reload